tests/parsing/smtlib/v2.7/errors/023_var_binding_unclosed_1.smt2
(set-logic ALL)
(assert (let ((x 42 _)) (= x 2)))
